# ai-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README-INSTALL.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  evaluator_config.yaml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  update.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md  skill-creator.md  verify-implementation.md
.github/workflows/: claude-assistant.yml  community.yml  dependabot-auto-merge.yml  docs.yml  publish.yml  regression-nightly.yml  regression-tests.yml  release.yml  test.yml
_ai-memory/_config/: agent-manifest.csv  aim-help.csv  files-manifest.csv  manifest.yaml  task-manifest.csv  workflow-manifest.csv
_ai-memory/_memory/: config.yaml
_ai-memory/agents/: code-reviewer.md  skill-creator.md  verify-implementation.md
_ai-memory/core/: config.yaml
_ai-memory/pov/: STEP-FILE-TEMPLATE.md  config.yaml  module-help.csv
_bmad-output/planning-artifacts/: analyst-discovery-research.md  architecture.md  epics-and-stories.md  prd.md  sprint-status.yaml
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docker/: .env.example  Dockerfile.evaluator-scheduler  Dockerfile.worker  README.md  docker-compose.langfuse.yml  docker-compose.yml
docker/embedding/: Dockerfile  main.py  requirements.txt
docker/github-sync/: Dockerfile  requirements.txt
docker/prometheus/: gen-prometheus-config.py  web.yml
docker/streamlit/: Dockerfile  app.py  requirements.txt
docs/: CONFIGURATION.md  DISPATCH-SKILLS.md  GITHUB-INTEGRATION.md  HOOKS.md  LANGFUSE-INTEGRATION.md  MANUAL-INSTALL-TESTING.md  MONITORING.md  MULTI-IDE-SUPPORT.md  PARZIVAL-SESSION-GUIDE.md  RECOVERY.md  error-context-retrieval-summary.md  error-context-retrieval.md  error-pattern-capture.md  prometheus-queries.md
docs/parzival/: AGENT-DISPATCH-GUIDE.md  BMAD-DISPATCH-GUIDE.md  BMAD-Multi-Agent-Architecture.md  CHANGELOG-POV.md  CONSTRAINT-ENFORCEMENT-SYSTEM.md  ESCALATION-ADOPTION-GUIDE.md  INSTALL-GUIDE-POV.md  MODEL-DISPATCH-GUIDE.md  Multi-Agent-Research-Tracker.md  README-POV.md  SHARDING_STRATEGY.md  TEAM-BUILDER-GUIDE.md
evaluators/: ev01_retrieval_relevance.yaml  ev01_retrieval_relevance_prompt.md  ev02_injection_value.yaml  ev02_injection_value_prompt.md  ev03_capture_completeness.yaml  ev03_capture_completeness_prompt.md  ev04_classification_accuracy.yaml  ev04_classification_accuracy_prompt.md  ev05_bootstrap_quality.yaml  ev05_bootstrap_quality_prompt.md  ev06_session_coherence.yaml  ev06_session_coherence_prompt.md
monitoring/: Dockerfile  main.py  requirements.txt
oversight/: project-status.md
scripts/: backup_qdrant.py  check_brittle_refs.py  create_datasets.py  create_score_configs.py  enable-hybrid-search.sh  generate_settings.py  github_sync.py  github_sync_service.py  health-check.py  hook_utils.py  install.sh  langfuse_setup.sh  list_projects.py  merge_settings.py  migrate_v209_github_collection.py  migrate_v221_hybrid_vectors.py  recover_hook_guards.py  reembed_code_patterns.py  rollback.sh  run_evaluations.py  setup-collections.py  stack.sh  update-pov.sh  update_parzival_settings.py  upgrade.sh  validate_commit_msg.py
scripts/memory/: README_VERIFY.md  aim_status.py  audit_group_ids.py  backfill_embeddings.py  backfill_pending_embeddings.py  backfill_reclassify_discussions.py  backfill_vectors_direct.py  classification_worker.py  collection_stats.py  evaluator_scheduler.py  health_check.sh  ingest_markdown.py  migrate_group_ids.py  parzival_save_handoff.py  parzival_save_insight.py  process_classification_queue.py  query_session_logs.py  repair_queue.py  run-with-env.sh  store_bp_002.py  test_memory.py  verify_hooks_e2e.py
src/memory/: __init__.py  __version__.py  agent_sdk_wrapper.py  config.py  decay.py  deduplication.py  embeddings.py  extraction.py  freshness.py  group_ids.py  injection.py  langfuse_config.py  logging_config.py  metrics.py  metrics_push.py  models.py  project.py  qdrant_client.py  search.py  security_scanner.py  stats.py  storage.py  trace_buffer.py  trace_flush_worker.py
tests/: check_skills.py  conftest.py  session_start_test_helpers.py  test_agent_sdk_wrapper.py  test_async_sdk_wrapper.py  test_best_practices_auto_activation.py  test_chunking.py  test_ci_schema_parity.py  test_classification_worker.py  test_config.py  test_config_v206.py  test_create_datasets.py  test_create_score_configs.py  test_cross_project_best_practices.py  test_decay.py  test_decay_integration.py  test_deduplication.py  test_dual_collection_search.py  test_embeddings.py  test_enable_quantization.py  test_error_detection.py  test_error_fix_linkage.py  test_error_pattern_capture.py  test_evaluator_config.py  test_evaluator_provider.py  test_evaluator_runner.py  test_extraction.py  test_freshness.py  test_generate_settings.py  test_health.py  test_health_check.py  test_hook_utils.py  test_ingest_markdown.py  test_langfuse_config.py  test_logging.py  test_merge_settings.py  test_metrics.py  test_metrics_push.py  test_monitoring_api.py  test_project.py  (+12 more)
tests/e2e/: conftest.py  test_grafana_dashboards.py
tests/hooks/: test_agent_response_store_async.py  test_error_store_async.py  test_langfuse_stop_hook.py  test_post_tool_capture.py  test_post_work_store_async.py  test_session_start.py  test_user_prompt_store_async.py
tests/integration/: test_backfill_integration.py  test_collection_statistics.py  test_core_modules.py  test_feedback_loop.py  test_grafana_dashboards.py  test_hook_configuration.py  test_hook_integration.py  test_hook_scripts_chunking.py  test_installation.py  test_logging.py  test_magic_moment.py  test_manual_save_memory.py  test_multi_project.py  test_multi_session.py  test_persistence.py  test_posttooluse_hook.py  (+4 more)
(+793 files in other folders)
